220-206 try to fix spinner on iphone

--- a/src-js/react/src/components/spinner/Spinner.css
+++ b/src-js/react/src/components/spinner/Spinner.css
@@ -1,4 +1,8 @@
 .loadAnimation {
+  max-width: 100vw;
+  max-height: 100vh;
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
